Quarterfinal_Compiler/parser.output
Terminals unused in grammar

    CATCH
    DELETE
    FINAL
    FRIEND
    NAMESPACE
    NEW
    OVERRIDE
    THROW
    TRY
    USING
    VIRTUAL


State 81 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | CHAR_LITERAL
    5                   | BOOL_TRUE
    6                   | BOOL_FALSE
    7                   | '(' expression ')'
    8                   | lambda_expression

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression PTR_OP IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LSHIFT_OP additive_expression
   42                 | shift_expression RSHIFT_OP additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LE_OP shift_expression
   47                      | relational_expression GE_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NE_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression LAND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression LOR_OP logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression '?' expression ':' conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | LSHIFT_ASSIGN
   72                    | RSHIFT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 lambda_expression: lambda_introducer lambda_declarator_opt compound_statement

   79 lambda_introducer: '[' lambda_capture_opt ']'

   80 lambda_capture_opt: ε
   81                   | assignment_expression

   82 lambda_declarator_opt: ε
   83                      | '(' parameter_type_list ')' lambda_specifier_opt trailing_return_type_opt
   84                      | '(' ')' lambda_specifier_opt trailing_return_type_opt

   85 lambda_specifier_opt: ε
   86                     | STATIC

   87 trailing_return_type_opt: ε
   88                         | PTR_OP type_name

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'

   92 declarator_id: class_name SCOPE_OP IDENTIFIER
   93              | IDENTIFIER

   94 declaration_specifiers: storage_class_specifier
   95                       | storage_class_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_specifier declaration_specifiers
   98                       | type_qualifier
   99                       | type_qualifier declaration_specifiers

  100 init_declarator_list: init_declarator
  101                     | init_declarator_list ',' init_declarator

  102 init_declarator: declarator
  103                | declarator '=' initializer

  104 storage_class_specifier: TYPEDEF
  105                        | EXTERN
  106                        | STATIC
  107                        | AUTO
  108                        | REGISTER

  109 type_specifier: VOID
  110               | STRING
  111               | CHAR
  112               | SHORT
  113               | INT
  114               | LONG
  115               | FLOAT
  116               | DOUBLE
  117               | SIGNED
  118               | UNSIGNED
  119               | BOOL
  120               | FILE_TYPE
  121               | struct_or_union_specifier
  122               | class_specifier
  123               | enum_specifier
  124               | TYPE_NAME

  125 struct_head: struct_or_union IDENTIFIER

  126 struct_or_union_specifier: struct_head '{' struct_declaration_list '}'
  127                          | struct_head
  128                          | struct_or_union '{' struct_declaration_list '}'

  129 struct_or_union: STRUCT
  130                | UNION

  131 struct_declaration_list: struct_declaration
  132                        | struct_declaration_list struct_declaration

  133 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  134 specifier_qualifier_list: type_specifier specifier_qualifier_list
  135                         | type_specifier
  136                         | type_qualifier specifier_qualifier_list
  137                         | type_qualifier

  138 struct_declarator_list: struct_declarator
  139                       | struct_declarator_list ',' struct_declarator

  140 struct_declarator: declarator
  141                  | declarator ':' constant_expression
  142                  | ':' constant_expression

  143 class_specifier: CLASS class_name '{' class_member_list '}'
  144                | CLASS class_name ':' base_class_list '{' class_member_list '}'

  145 base_class_list: access_specifier class_name
  146                | base_class_list ',' access_specifier class_name

  147 access_specifier: PUBLIC
  148                 | PRIVATE
  149                 | PROTECTED

  150 class_member_list: ε
  151                  | class_member_list class_member

  152 class_member: access_specifier ':'
  153             | declaration
  154             | function_definition

  155 class_name: IDENTIFIER

  156 enum_specifier: ENUM '{' enumerator_list '}'
  157               | ENUM IDENTIFIER '{' enumerator_list '}'

  158 enumerator_list: enumerator
  159                | enumerator_list ',' enumerator

  160 enumerator: IDENTIFIER
  161           | IDENTIFIER '=' constant_expression

  162 type_qualifier: CONST
  163               | VOLATILE

  164 declarator: pointer direct_declarator
  165           | direct_declarator

  166 direct_declarator: declarator_id
  167                  | '(' declarator ')'
  168                  | direct_declarator '[' constant_expression ']'
  169                  | direct_declarator '[' ']'
  170                  | direct_declarator '(' parameter_type_list ')'
  171                  | direct_declarator '(' identifier_list ')'
  172                  | direct_declarator '(' ')'

  173 pointer: '*'
  174        | '*' pointer

  175 parameter_type_list: parameter_list
  176                    | parameter_list ',' ELLIPSIS

  177 parameter_list: parameter_declaration
  178               | parameter_list ',' parameter_declaration

  179 parameter_declaration: declaration_specifiers declarator
  180                      | declaration_specifiers abstract_declarator
  181                      | declaration_specifiers

  182 identifier_list: IDENTIFIER
  183                | identifier_list ',' IDENTIFIER

  184 type_name: specifier_qualifier_list
  185          | specifier_qualifier_list abstract_declarator

  186 abstract_declarator: pointer
  187                    | direct_abstract_declarator
  188                    | pointer direct_abstract_declarator

  189 direct_abstract_declarator: '(' abstract_declarator ')'
  190                           | '[' ']'
  191                           | '[' constant_expression ']'
  192                           | direct_abstract_declarator '[' ']'
  193                           | direct_abstract_declarator '[' constant_expression ']'

  194 initializer: assignment_expression
  195            | '{' initializer_list '}'
  196            | '{' initializer_list ',' '}'

  197 initializer_list: initializer
  198                 | initializer_list ',' initializer

  199 statement: labeled_statement
  200          | compound_statement
  201          | expression_statement
  202          | selection_statement
  203          | iteration_statement
  204          | jump_statement

  205 labeled_statement: IDENTIFIER ':' statement
  206                  | CASE constant_expression ':' statement
  207                  | DEFAULT ':' statement

  208 compound_statement: '{' '}'
  209                   | '{' block_items '}'

  210 block_items: block_item
  211            | block_items block_item
  212            | error

  213 block_item: declaration
  214           | statement

  215 expression_statement: ';'
  216                     | expression ';'

  217 selection_statement: IF '(' expression ')' statement
  218                    | IF '(' expression ')' statement ELSE statement
  219                    | SWITCH '(' expression ')' statement

  220 iteration_statement: WHILE '(' expression ')' statement
  221                    | UNTIL '(' expression ')' statement
  222                    | DO statement WHILE '(' expression ')' ';'
  223                    | FOR '(' expression_statement expression_statement ')' statement
  224                    | FOR '(' expression_statement expression_statement expression ')' statement
  225                    | FOR '(' declaration expression_statement ')' statement
  226                    | FOR '(' declaration expression_statement expression ')' statement

  227 jump_statement: GOTO IDENTIFIER ';'
  228               | CONTINUE ';'
  229               | BREAK ';'
  230               | RETURN ';'
  231               | RETURN expression ';'

  232 translation_unit: external_declaration
  233                 | translation_unit external_declaration

  234 external_declaration: function_definition
  235                     | declaration
  236                     | statement
  237                     | error

  238 function_definition: declaration_specifiers declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 30
    '%' (37) 36
    '&' (38) 25 52
    '(' (40) 7 11 12 24 32 83 84 167 170 171 172 189 217 218 219 220 221 222 223 224 225 226
    ')' (41) 7 11 12 24 32 83 84 167 170 171 172 189 217 218 219 220 221 222 223 224 225 226
    '*' (42) 26 34 173 174
    '+' (43) 27 38
    ',' (44) 18 77 101 139 146 159 176 178 183 196 198
    '-' (45) 28 39
    '.' (46) 13
    '/' (47) 35
    ':' (58) 62 141 142 144 152 205 206 207
    ';' (59) 90 91 133 215 216 222 227 228 229 230 231
    '<' (60) 44
    '=' (61) 65 103 161
    '>' (62) 45
    '?' (63) 62
    '[' (91) 10 79 168 169 190 191 192 193
    ']' (93) 10 79 168 169 190 191 192 193
    '^' (94) 54
    '{' (123) 126 128 143 144 156 157 195 196 208 209
    '|' (124) 56
    '}' (125) 126 128 143 144 156 157 195 196 208 209
    '~' (126) 29
    error (256) 212 237
    IDENTIFIER <str> (258) 1 13 14 92 93 125 155 157 160 161 182 183 205 227
    CONSTANT <str> (259) 2
    STRING_LITERAL <str> (260) 3
    SIZEOF <str> (261) 23 24
    CHAR_LITERAL <str> (262) 4
    PTR_OP <str> (263) 14 88
    INC_OP <str> (264) 15 20
    DEC_OP <str> (265) 16 21
    LSHIFT_OP <str> (266) 41
    RSHIFT_OP <str> (267) 42
    LE_OP <str> (268) 46
    GE_OP <str> (269) 47
    EQ_OP <str> (270) 49
    NE_OP <str> (271) 50
    LAND_OP <str> (272) 58
    LOR_OP <str> (273) 60
    MUL_ASSIGN <str> (274) 66
    DIV_ASSIGN <str> (275) 67
    MOD_ASSIGN <str> (276) 68
    ADD_ASSIGN <str> (277) 69
    SUB_ASSIGN <str> (278) 70
    LSHIFT_ASSIGN <str> (279) 71
    RSHIFT_ASSIGN <str> (280) 72
    AND_ASSIGN <str> (281) 73
    XOR_ASSIGN <str> (282) 74
    OR_ASSIGN <str> (283) 75
    TYPE_NAME <str> (284) 124
    FILE_TYPE <str> (285) 120
    TYPEDEF <str> (286) 104
    EXTERN <str> (287) 105
    STATIC <str> (288) 86 106
    AUTO <str> (289) 107
    REGISTER <str> (290) 108
    STRING <str> (291) 110
    CHAR <str> (292) 111
    SHORT <str> (293) 112
    INT <str> (294) 113
    LONG <str> (295) 114
    SIGNED <str> (296) 117
    UNSIGNED <str> (297) 118
    FLOAT <str> (298) 115
    DOUBLE <str> (299) 116
    CONST <str> (300) 162
    VOLATILE <str> (301) 163
    VOID <str> (302) 109
    BOOL <str> (303) 119
    BOOL_TRUE <str> (304) 5
    BOOL_FALSE <str> (305) 6
    STRUCT <str> (306) 129
    UNION <str> (307) 130
    ENUM <str> (308) 156 157
    ELLIPSIS <str> (309) 176
    CASE <str> (310) 206
    DEFAULT <str> (311) 207
    IF <str> (312) 217 218
    ELSE <str> (313) 218
    SWITCH <str> (314) 219
    WHILE <str> (315) 220 222
    DO <str> (316) 222
    FOR <str> (317) 223 224 225 226
    GOTO <str> (318) 227
    CONTINUE <str> (319) 228
    BREAK <str> (320) 229
    RETURN <str> (321) 230 231
    UNTIL <str> (322) 221
    CATCH (323)
    CLASS (324) 143 144
    DELETE (325)
    FINAL (326)
    FRIEND (327)
    NAMESPACE (328)
    NEW (329)
    OVERRIDE (330)
    PRIVATE (331) 148
    PROTECTED (332) 149
    PUBLIC (333) 147
    THROW (334)
    TRY (335)
    USING (336)
    VIRTUAL (337)
    SCOPE_OP (338) 92


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    primary_expression <str> (109)
        on left: 1 2 3 4 5 6 7 8
        on right: 9
    postfix_expression <str> (110)
        on left: 9 10 11 12 13 14 15 16
        on right: 10 11 12 13 14 15 16 19
    argument_expression_list (111)
        on left: 17 18
        on right: 12 18
    unary_expression <str> (112)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 64
    unary_operator (113)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression (114)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <str> (115)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <str> (116)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <str> (117)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <str> (118)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <str> (119)
        on left: 48 49 50
        on right: 49 50 51 52
    and_expression <str> (120)
        on left: 51 52
        on right: 52 53 54
    exclusive_or_expression <str> (121)
        on left: 53 54
        on right: 54 55 56
    inclusive_or_expression <str> (122)
        on left: 55 56
        on right: 56 57 58
    logical_and_expression <str> (123)
        on left: 57 58
        on right: 58 59 60
    logical_or_expression <str> (124)
        on left: 59 60
        on right: 60 61 62
    conditional_expression <str> (125)
        on left: 61 62
        on right: 62 63 89
    assignment_expression <str> (126)
        on left: 63 64
        on right: 17 18 64 76 77 81 194
    assignment_operator (127)
        on left: 65 66 67 68 69 70 71 72 73 74 75
        on right: 64
    expression <str> (128)
        on left: 76 77
        on right: 7 10 62 77 216 217 218 219 220 221 222 224 226 231
    lambda_expression <str> (129)
        on left: 78
        on right: 8
    lambda_introducer <str> (130)
        on left: 79
        on right: 78
    lambda_capture_opt <str> (131)
        on left: 80 81
        on right: 79
    lambda_declarator_opt <str> (132)
        on left: 82 83 84
        on right: 78
    lambda_specifier_opt <str> (133)
        on left: 85 86
        on right: 83 84
    trailing_return_type_opt <str> (134)
        on left: 87 88
        on right: 83 84
    constant_expression (135)
        on left: 89
        on right: 141 142 161 168 191 193 206
    declaration <str> (136)
        on left: 90 91
        on right: 153 213 225 226 235
    declarator_id <str> (137)
        on left: 92 93
        on right: 166
    declaration_specifiers <str> (138)
        on left: 94 95 96 97 98 99
        on right: 90 91 95 97 99 179 180 181 238
    init_declarator_list <str> (139)
        on left: 100 101
        on right: 91 101
    init_declarator <str> (140)
        on left: 102 103
        on right: 100 101
    storage_class_specifier <str> (141)
        on left: 104 105 106 107 108
        on right: 94 95
    type_specifier <str> (142)
        on left: 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
        on right: 96 97 134 135
    struct_head <str> (143)
        on left: 125
        on right: 126 127
    struct_or_union_specifier <str> (144)
        on left: 126 127 128
        on right: 121
    struct_or_union <str> (145)
        on left: 129 130
        on right: 125 128
    struct_declaration_list <str> (146)
        on left: 131 132
        on right: 126 128 132
    struct_declaration <str> (147)
        on left: 133
        on right: 131 132
    specifier_qualifier_list <str> (148)
        on left: 134 135 136 137
        on right: 133 134 136 184 185
    struct_declarator_list <str> (149)
        on left: 138 139
        on right: 133 139
    struct_declarator <str> (150)
        on left: 140 141 142
        on right: 138 139
    class_specifier <str> (151)
        on left: 143 144
        on right: 122
    base_class_list <str> (152)
        on left: 145 146
        on right: 144 146
    access_specifier <str> (153)
        on left: 147 148 149
        on right: 145 146 152
    class_member_list <str> (154)
        on left: 150 151
        on right: 143 144 151
    class_member <str> (155)
        on left: 152 153 154
        on right: 151
    class_name <str> (156)
        on left: 155
        on right: 92 143 144 145 146
    enum_specifier (157)
        on left: 156 157
        on right: 123
    enumerator_list (158)
        on left: 158 159
        on right: 156 157 159
    enumerator (159)
        on left: 160 161
        on right: 158 159
    type_qualifier <str> (160)
        on left: 162 163
        on right: 98 99 136 137
    declarator <str> (161)
        on left: 164 165
        on right: 102 103 140 141 167 179 238
    direct_declarator <str> (162)
        on left: 166 167 168 169 170 171 172
        on right: 164 165 168 169 170 171 172
    pointer <str> (163)
        on left: 173 174
        on right: 164 174 186 188
    parameter_type_list (164)
        on left: 175 176
        on right: 83 170
    parameter_list (165)
        on left: 177 178
        on right: 175 176 178
    parameter_declaration (166)
        on left: 179 180 181
        on right: 177 178
    identifier_list (167)
        on left: 182 183
        on right: 171 183
    type_name (168)
        on left: 184 185
        on right: 24 32 88
    abstract_declarator (169)
        on left: 186 187 188
        on right: 180 185 189
    direct_abstract_declarator (170)
        on left: 189 190 191 192 193
        on right: 187 188 192 193
    initializer (171)
        on left: 194 195 196
        on right: 103 197 198
    initializer_list (172)
        on left: 197 198
        on right: 195 196 198
    statement (173)
        on left: 199 200 201 202 203 204
        on right: 205 206 207 214 217 218 219 220 221 222 223 224 225 226 236
    labeled_statement (174)
        on left: 205 206 207
        on right: 199
    compound_statement (175)
        on left: 208 209
        on right: 78 200 238
    block_items (176)
        on left: 210 211 212
        on right: 209 211
    block_item (177)
        on left: 213 214
        on right: 210 211
    expression_statement (178)
        on left: 215 216
        on right: 201 223 224 225 226
    selection_statement (179)
        on left: 217 218 219
        on right: 202
    iteration_statement (180)
        on left: 220 221 222 223 224 225 226
        on right: 203
    jump_statement (181)
        on left: 227 228 229 230 231
        on right: 204
    translation_unit (182)
        on left: 232 233
        on right: 0 233
    external_declaration (183)
        on left: 234 235 236 237
        on right: 232 233
    function_definition (184)
        on left: 238
        on right: 154 234


State 0

    0 $accept: • translation_unit $end

    error           shift, and go to state 1
    IDENTIFIER      shift, and go to state 2
    CONSTANT        shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    SIZEOF          shift, and go to state 5
    CHAR_LITERAL    shift, and go to state 6
    INC_OP          shift, and go to state 7
    DEC_OP          shift, and go to state 8
    TYPE_NAME       shift, and go to state 9
    FILE_TYPE       shift, and go to state 10
    TYPEDEF         shift, and go to state 11
    EXTERN          shift, and go to state 12
    STATIC          shift, and go to state 13
    AUTO            shift, and go to state 14
    REGISTER        shift, and go to state 15
    STRING          shift, and go to state 16
    CHAR            shift, and go to state 17
    SHORT           shift, and go to state 18
    INT             shift, and go to state 19
    LONG            shift, and go to state 20
    SIGNED          shift, and go to state 21
    UNSIGNED        shift, and go to state 22
    FLOAT           shift, and go to state 23
    DOUBLE          shift, and go to state 24
    CONST           shift, and go to state 25
    VOLATILE        shift, and go to state 26
    VOID            shift, and go to state 27
    BOOL            shift, and go to state 28
    BOOL_TRUE       shift, and go to state 29
    BOOL_FALSE      shift, and go to state 30
    STRUCT          shift, and go to state 31
    UNION           shift, and go to state 32
    ENUM            shift, and go to state 33
    CASE            shift, and go to state 34
    DEFAULT         shift, and go to state 35
    IF              shift, and go to state 36
    SWITCH          shift, and go to state 37
    WHILE           shift, and go to state 38
    DO              shift, and go to state 39
    FOR             shift, and go to state 40
    GOTO            shift, and go to state 41
    CONTINUE        shift, and go to state 42
    BREAK           shift, and go to state 43
    RETURN          shift, and go to state 44
    UNTIL           shift, and go to state 45
    CLASS           shift, and go to state 46
    '&'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '['             shift, and go to state 52
    '~'             shift, and go to state 53
    '!'             shift, and go to state 54
    ';'             shift, and go to state 55
    '{'             shift, and go to state 56

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    cast_expression            go to state 61
    multiplicative_expression  go to state 62
    additive_expression        go to state 63
    shift_expression           go to state 64
    relational_expression      go to state 65
    equality_expression        go to state 66
    and_expression             go to state 67
    exclusive_or_expression    go to state 68
    inclusive_or_expression    go to state 69
    logical_and_expression     go to state 70
    logical_or_expression      go to state 71
    conditional_expression     go to state 72
    assignment_expression      go to state 73
    expression                 go to state 74
    lambda_expression          go to state 75
    lambda_introducer          go to state 76
    declaration                go to state 77
    declaration_specifiers     go to state 78
    storage_class_specifier    go to state 79
    type_specifier             go to state 80
    struct_head                go to state 81
    struct_or_union_specifier  go to state 82
    struct_or_union            go to state 83
    class_specifier            go to state 84
    enum_specifier             go to state 85
    type_qualifier             go to state 86
    statement                  go to state 87
    labeled_statement          go to state 88
    compound_statement         go to state 89
    expression_statement       go to state 90
    selection_statement        go to state 91
    iteration_statement        go to state 92
    jump_statement             go to state 93
    translation_unit           go to state 94
    external_declaration       go to state 95
    function_definition        go to state 96


State 1

  237 external_declaration: error •

    $default  reduce using rule 237 (external_declaration)


State 2

    1 primary_expression: IDENTIFIER •
  205 labeled_statement: IDENTIFIER • ':' statement

    ':'  shift, and go to state 97

    $default  reduce using rule 1 (primary_expression)


State 3

    2 primary_expression: CONSTANT •

    $default  reduce using rule 2 (primary_expression)


State 4

    3 primary_expression: STRING_LITERAL •

    $default  reduce using rule 3 (primary_expression)


State 5

   23 unary_expression: SIZEOF • unary_expression
   24                 | SIZEOF • '(' type_name ')'

    IDENTIFIER      shift, and go to state 98
    CONSTANT        shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    SIZEOF          shift, and go to state 5
    CHAR_LITERAL    shift, and go to state 6
    INC_OP          shift, and go to state 7
    DEC_OP          shift, and go to state 8
    BOOL_TRUE       shift, and go to state 29
    BOOL_FALSE      shift, and go to state 30
    '&'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 99
    '['             shift, and go to state 52
    '~'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression  go to state 57
    postfix_expression  go to state 58
    unary_expression    go to state 100
    unary_operator      go to state 60
    lambda_expression   go to state 75
    lambda_introducer   go to state 76


State 6

    4 primary_expression: CHAR_LITERAL •

    $default  reduce using rule 4 (primary_expression)


State 7

   20 unary_expression: INC_OP • unary_expression

    IDENTIFIER      shift, and go to state 98
    CONSTANT        shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    SIZEOF          shift, and go to state 5
    CHAR_LITERAL    shift, and go to state 6
    INC_OP          shift, and go to state 7
    DEC_OP          shift, and go to state 8
    BOOL_TRUE       shift, and go to state 29
    BOOL_FALSE      shift, and go to state 30
    '&'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 101
    '['             shift, and go to state 52
    '~'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression  go to state 57
    postfix_expression  go to state 58
    unary_expression    go to state 102
    unary_operator      go to state 60
    lambda_expression   go to state 75
    lambda_introducer   go to state 76


State 8

   21 unary_expression: DEC_OP • unary_expression

    IDENTIFIER      shift, and go to state 98
    CONSTANT        shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    SIZEOF          shift, and go to state 5
    CHAR_LITERAL    shift, and go to state 6
    INC_OP          shift, and go to state 7
    DEC_OP          shift, and go to state 8
    BOOL_TRUE       shift, and go to state 29
    BOOL_FALSE      shift, and go to state 30
    '&'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 101
    '['             shift, and go to state 52
    '~'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression  go to state 57
    postfix_expression  go to state 58
    unary_expression    go to state 103
    unary_operator      go to state 60
    lambda_expression   go to state 75
    lambda_introducer   go to state 76


State 9

  124 type_specifier: TYPE_NAME •

    $default  reduce using rule 124 (type_specifier)


State 10

  120 type_specifier: FILE_TYPE •

    $default  reduce using rule 120 (type_specifier)


State 11

  104 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 104 (storage_class_specifier)


State 12

  105 storage_class_specifier: EXTERN •

    $default  reduce using rule 105 (storage_class_specifier)


State 13

  106 storage_class_specifier: STATIC •

    $default  reduce using rule 106 (storage_class_specifier)


State 14

  107 storage_class_specifier: AUTO •

    $default  reduce using rule 107 (storage_class_specifier)


State 15

  108 storage_class_specifier: REGISTER •

    $default  reduce using rule 108 (storage_class_specifier)


State 16

  110 type_specifier: STRING •

    $default  reduce using rule 110 (type_specifier)


State 17

  111 type_specifier: CHAR •

    $default  reduce using rule 111 (type_specifier)


State 18

  112 type_specifier: SHORT •

    $default  reduce using rule 112 (type_specifier)


State 19

  113 type_specifier: INT •

    $default  reduce using rule 113 (type_specifier)


State 20

  114 type_specifier: LONG •

    $default  reduce using rule 114 (type_specifier)


State 21

  117 type_specifier: SIGNED •

    $default  reduce using rule 117 (type_specifier)


State 22

  118 type_specifier: UNSIGNED •

    $default  reduce using rule 118 (type_specifier)


State 23

  115 type_specifier: FLOAT •

    $default  reduce using rule 115 (type_specifier)


State 24

  116 type_specifier: DOUBLE •

    $default  reduce using rule 116 (type_specifier)


State 25

  162 type_qualifier: CONST •

    $default  reduce using rule 162 (type_qualifier)


State 26

  163 type_qualifier: VOLATILE •

    $default  reduce using rule 163 (type_qualifier)


State 27

  109 type_specifier: VOID •

    $default  reduce using rule 109 (type_specifier)


State 28

  119 type_specifier: BOOL •

    $default  reduce using rule 119 (type_specifier)


State 29

    5 primary_expression: BOOL_TRUE •

    $default  reduce using rule 5 (primary_expression)


State 30

    6 primary_expression: BOOL_FALSE •

    $default  reduce using rule 6 (primary_expression)


State 31

  129 struct_or_union: STRUCT •

    $default  reduce using rule 129 (struct_or_union)


State 32

  130 struct_or_union: UNION •

    $default  reduce using rule 130 (struct_or_union)


State 33

  156 enum_specifier: ENUM • '{' enumerator_list '}'
  157               | ENUM • IDENTIFIER '{' enumerator_list '}'

    IDENTIFIER  shift, and go to state 104
    '{'         shift, and go to state 105


State 34

  206 labeled_statement: CASE • constant_expression ':' statement

    IDENTIFIER      shift, and go to state 98
    CONSTANT        shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    SIZEOF          shift, and go to state 5
    CHAR_LITERAL    shift, and go to state 6
    INC_OP          shift, and go to state 7
    DEC_OP          shift, and go to state 8
    BOOL_TRUE       shift, and go to state 29
    BOOL_FALSE      shift, and go to state 30
    '&'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '['             shift, and go to state 52
    '~'             shift, and go to state 53
    '!'             shift, and go to state 54

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 106
    unary_operator             go to state 60
    cast_expression            go to state 61
    multiplicative_expression  go to state 62
    additive_expression        go to state 63
    shift_expression           go to state 64
    relational_expression      go to state 65
    equality_expression        go to state 66
    and_expression             go to state 67
    exclusive_or_expression    go to state 68
    inclusive_or_expression    go to state 69
    logical_and_expression     go to state 70
    logical_or_expression      go to state 71
    conditional_expression     go to state 107
    lambda_expression          go to state 75
    lambda_introducer          go to state 76
    constant_expression        go to state 108


State 35

  207 labeled_statement: DEFAULT • ':' statement

    ':'  shift, and go to state 109


State 36

  217 selection_statement: IF • '(' expression ')' statement
  218                    | IF • '(' expression ')' statement ELSE statement

    '('  shift, and go to state 110


State 37

  219 selection_statement: SWITCH • '(' expression ')' statement

    '('  shift, and go to state 111


State 38

  220 iteration_statement: WHILE • '(' expression ')' statement

    '('  shift, and go to state 112


State 39

  222 iteration_statement: DO • statement WHILE '(' expression ')' ';'

    IDENTIFIER      shift, and go to state 2
    CONSTANT        shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4
    SIZEOF          shift, and go to state 5
    CHAR_LITERAL    shift, and go to state 6
    INC_OP          shift, and go to state 7
    DEC_OP          shift, and go to state 8
    BOOL_TRUE       shift, and go to state 29
    BOOL_FALSE      shift, and go to state 30
    CASE            shift, and go to state 34
    DEFAULT         shift, and go to state 35
    IF              shift, and go to state 36
    SWITCH          shift, and go to state 37
    WHILE           shift, and go to state 38
    DO              shift, and go to state 39
    FOR             shift, and go to state 40
    GOTO            shift, and go to state 41
    CONTINUE        shift, and go to state 42
    BREAK           shift, and go to state 43
    RETURN          shift, and go to state 44
    UNTIL           shift, and go to state 45
    '&'             shift, and go to state 47
    '+'             shift, and go to state 48
    '-'             shift, and go to state 49
    '*'             shift, and go to state 50
    '('             shift, and go to state 51
    '['             shift, and go to state 52
    '~'             shift, and go to state 53
    '!'             shift, and go to state 54
    ';'             shift, and go to state 55
    '{'             shift, and go to state 56

    primary_expression         go to state 57
    postfix_expression         go to state 58
    unary_expression           go to state 59
    unary_operator             go to state 60
    cast_expression            go to state 61
    multiplicative_expression  go to state 62
    additive_expression        go to state 63
    shift_expression           go to state 64
    relational_expression      go to state 65
    equality_expression        go to state 66
    and_expression             go to state 67
    exclusive_or_expression    go to state 68
    inclusive_or_expression    go to state 69
    logical_and_expression     go to state 70
    logical_or_expression      go to state 71
    conditional_expression     go to state 72
    assignment_expression      go to state 73
    expression                 go to state 74
    lambda_expression          go to state 75
    lambda_introducer          go to state 76
    statement                  go to state 113
    labeled_statement          go to state 88
    compound_statement         go to state 89
    expression_statement       go to state 90
    selection_statement        go to state 91
    iteration_statement        go to state 92
    jump_statement             go to state 93


State 40

  223 iteration_statement: FOR • '(' expression_statement expression_statement ')' statement
  224                    | FOR • '(' expression_statement expression_statement expression ')' statement
  225                    | FOR • '(' declaration expression_statement ')' statement
  226                    | FOR • '(' declaration expression_statement expression ')' statement

    '('  shift, and go to state 114


State 41

  227 jump_statement: GOTO • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 115


State 42

  228 jump_statement: CONTINUE • ';'

    ';'  shift, and go to state 116


State 43

  229 jump_statement: BREAK • ';'

    ';'  shift, and go to state 117


State 44

  230 jump_statement: RETURN • ';'
  231               | RETURN • expression ';'
